# artifact-ml

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  README.md  artifact_ml.code-workspace  codecov.yml  mkdocs.yml  pyproject.toml  pytest.ini
.github/: CONTRIBUTING.md  (+5 more)
artifact-core/: README.md  mkdocs.yml  pyproject.toml  sonar-project.properties
artifact-core/artifact_core/_base/: artifact.py  artifact_dependencies.py  engine.py  registry.py
artifact-core/artifact_core/_base/contracts/: resources.py
artifact-core/artifact_core/_base/core/: artifact.py  hyperparams.py  resource_spec.py
artifact-core/artifact_core/_base/orchestration/: engine.py  key_formatter.py  registry.py  registry_reader.py  registry_writer.py  repository.py  repository_reader.py  repository_writer.py
artifact-core/artifact_core/_base/primitives/: artifact_type.py
artifact-core/artifact_core/_base/types/: artifact_result.py
artifact-core/artifact_core/_bootstrap/: config.py  initializer.py  toolkit_initializer.py
artifact-core/artifact_core/_bootstrap/config/: config.py  config_reader.py  filename_resolver.py  override_locator.py  overrider.py  toolkit_config.py
artifact-core/artifact_core/_bootstrap/libs/: config_identifier.py  config_merger.py  override_locator.py
artifact-core/artifact_core/_bootstrap/primitives/: domain_toolkit.py
artifact-core/artifact_core/_interfaces/: serializable.py
artifact-core/artifact_core/base/: artifact.py  artifact_dependencies.py  engine.py  registry.py
artifact-core/artifact_core/binary_classification/: __init__.py  _resources.py
artifact-core/artifact_core/table_comparison/: __init__.py  _resources.py
artifact-core/artifact_core/typing/: __init__.py
artifact-core/assets/: binary_classification.csv
artifact-core/demo/: autoscaling_demo.ipynb  table_comparison.ipynb
artifact-core/demo/custom_artifacts/: bani.py
artifact-core/demos/binary_classification/: demo.ipynb  generate.ipynb
artifact-core/demos/table_comparison/: demo.ipynb
artifact-core/docs/: architecture.md  contributing_artifacts.md  core_entities.md  development_guide.md  domain_toolkits.md  getting_started.md  implementation_guide.md  index.md  mkdocs.yml  table_comparison_toolkit.md  user_guide.md
artifact-core/docs/domain_toolkits/: binary_classification.md  binary_classification_toolkit.md  index.md  index.md.md  table_comparison.md  table_comparison_toolkit.md
artifact-core/docs/pages/: home.md
artifact-core/notebooks/: table_comparison.ipynb
artifact-core/tests/: conftest.py  test_ex.py
artifact-core/tests/_bootstrap/: test_override_locator.py  test_toolkit_initializer.py
artifact-core/tests/_interfaces/: test_serializable.py
artifact-core/tests/base/: test_artifact.py  test_engine.py  test_registry.py
artifact-core/tests/binary_classification/: conftest.py  test_binary_classification_api.py
artifact-core/tests/core/: test_artifacts.py
artifact-core/tests/table_comparison/: conftest.py  test_table_comparison_api.py  test_table_comparison_engine.py
artifact-core/tests/typing/: test_typing_api.py
artifact-experiment/: README.md  mkdocs.yml  pyproject.toml  sonar-project.properties
artifact-experiment/artifact_experiment/: __init__.py
artifact-experiment/artifact_experiment/base/: callback_factory.py  data_split.py  validation_plan.py
artifact-experiment/artifact_experiment/binary_classification/: __init__.py  _callback_factory.py  _callback_resources.py  _plan.py  callback_factory.py  callback_resources.py  plan.py  resources.py  validation_plan.py
artifact-experiment/artifact_experiment/table_comparison/: __init__.py  _callback_factory.py  _callback_resources.py  _plan.py  callback_factory.py  callback_resources.py  plan.py  resources.py  validation_plan.py
artifact-experiment/artifact_experiment/tracking/: __init__.py
artifact-experiment/artifact_experiment/typing/: __init__.py
artifact-experiment/assets/: synthetic.csv
artifact-experiment/demo/: table_comparison.ipynb
artifact-experiment/demos/: binary_classification.ipynb  table_comparison.ipynb
artifact-experiment/docs/: architecture.md  core_entities.md  development_guide.md  getting_started.md  index.md  mkdocs.yml  user_guide.md
artifact-experiment/docs/pages/: home.md
artifact-experiment/notebooks/: table_comparison.ipynb
artifact-experiment/tests/: conftest.py  test_placeholder.py
artifact-experiment/tests/table_comparison/: conftest.py  test_callback_factory.py  test_callback_resources.py  test_resources.py
artifact-experiment/tests/utils/: test_directory_opener.py  test_incremental_path_generator.py
artifact-torch/: README.md  mkdocs.yml  pyproject.toml  sonar-project.properties
artifact-torch/artifact_torch/binary_classification/: __init__.py  _experiment.py  _model.py  _routine.py  experiment.py  model.py  routine.py
artifact-torch/artifact_torch/core/: __init__.py
artifact-torch/artifact_torch/early_stopping/: __init__.py
artifact-torch/artifact_torch/model_tracking/: __init__.py
artifact-torch/artifact_torch/spi/: __init__.py
artifact-torch/artifact_torch/table_comparison/: __init__.py  _experiment.py  _model.py  _routine.py  experiment.py  model.py  routine.py  tabular_data_exporter.py  trainer.py  validation_plan_callback.py  validation_routine.py
artifact-torch/assets/: binary_classification.csv
artifact-torch/demo/: README.md  demo.ipynb  tabular_vae.py
artifact-torch/demo/config/: config.json  constants.py
artifact-torch/demo/data/: dataset.py  feature_flattener.py
artifact-torch/demo/model/: architecture.py  io.py  synthesizer.py  vae.py
artifact-torch/demo/routines/: batch.py
artifact-torch/demo/trainer/: trainer.py  validation_plan.py  validation_routine.py
artifact-torch/demos/binary_classification/: README.md  demo.ipynb  mlp_classifier.py
artifact-torch/demos/table_comparison/: README.md  demo.ipynb  tabular_vae.py
artifact-torch/docs/: architecture.md  core_entities.md  development_guide.md  getting_started.md  index.md  mkdocs.yml  nav.yml  user_guide.md
artifact-torch/docs/pages/: home.md
(+1560 files in other folders)
