[tool.poetry]
name = "artifact-ml"
version = "0.1.0"
description = "Monorepo for the Artifact validation suite"
authors = ["Vasileios Ektor Papoulias <hector.papoulias@gmail.com>"]

[tool.poetry.workspace]
packages = [
    { include = "packages/artifact-core" },
    { include = "packages/artifact-experiment" },
    { include = "packages/artifact-torch" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix=true
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]