[project]
name = "artifact-core"
version = "0.1.0"
description = "A flexible minimal interface for the computation of heterogeneous validation artifacts in thematically related ML experiments."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"


[tool.pytest.ini_options]
testpaths = ["tests"]