[project]
name = "artifact-core"
version = "0.2.0"
description = "Artifact-ML foundation: a declarative interface for the computation of validation artifacts in ML experiments."
authors = [
    {name = "Vasileios Ektor Papoulias",email = "hector.papoulias@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"

[project.urls]
Homepage = "https://github.com/vasileios-ektor-papoulias/artifact-ml"
Repository = "https://github.com/vasileios-ektor-papoulias/artifact-ml"
Documentation = "https://artifact-ml.readthedocs.io/en/latest/artifact-core"
"Bug Tracker" = "https://github.com/vasileios-ektor-papoulias/artifact-ml/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "artifact_core" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=2.2.4,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
scikit-learn = ">=1.6.1,<2.0.0"
dython = ">=0.7.9,<0.8.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.5"
pytest-cov = "^7.0.0"