[project]
name = "artifact-experiment"
packages = [{ include = "artifact-experiment" }]
version = "0.1.0"
description = "Experiment orchestration and tracking for the Artifact framework."
authors = [
    {name = "Vasileios Ektor Papoulias",email = "hector.papoulias@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
tqdm = ">=4.67.1,<5.0.0"
neptune = ">=1.14.0,<2.0.0"
mlflow = ">=2.22.0,<3.0.0"
artifact-core = { path = "../artifact-core", develop = true }
clearml = "^2.0.0"
ipywidgets = "^8.1.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.5"
pytest-cov = "^7.0.0"