[project]
name = "artifact-experiment"
version = "0.1.8"
description = "Artifact-ML experiment orchestration: declarative builder toolkit for reusable validation workflows with integrated tracking."
authors = [
    {name = "Vasileios Ektor Papoulias",email = "hector.papoulias@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"

[project.urls]
Homepage = "https://github.com/vasileios-ektor-papoulias/artifact-ml"
Repository = "https://github.com/vasileios-ektor-papoulias/artifact-ml"
Documentation = "https://artifact-ml.readthedocs.io/en/latest/artifact-experiment"
"Bug Tracker" = "https://github.com/vasileios-ektor-papoulias/artifact-ml/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "artifact_experiment" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
tqdm = ">=4.67.1,<5.0.0"
neptune = ">=1.14.0,<2.0.0"
mlflow = ">=2.22.0,<3.0.0"
clearml = "^2.0.0"
ipywidgets = "^8.1.7"
artifact-core = "^0.1.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.5"
pytest-cov = "^7.0.0"
