[project]
name = "artifact-torch"
packages = [{ include = "artifact-torch" }]
version = "0.1.0"
description = "PyTorch integration for the Artifact framework."
authors = [
    {name = "Vasileios Ektor Papoulias",email = "hector.papoulias@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
artifact-core = {path = "../artifact-core", develop = true}
artifact-experiment = {path = "../artifact-experiment", develop = true}
torch = ">=2.7.0,<3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.5"
pytest-cov = "^7.0.0"
